--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Text 00346.</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Criando uma tag .</h1>
+    <p>Um paragrafo</p>
 
 </body>
 </html>
